--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
-project(conways_game_of_life LANGUAGES C CXX)
+project(conways_game_of_life VERSION 1.0.0 LANGUAGES C CXX)
 
 add_subdirectory("dependencies/tex")
 
