remove console window on win platform

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,12 @@ project(conways_game_of_life VERSION 1.0.0 LANGUAGES C CXX)
 
 add_subdirectory("dependencies/tex")
 
-add_executable(cgol "sources/main.cpp")
+if (WIN32)
+	add_executable(cgol WIN32 "sources/main.cpp")
+	target_compile_definitions(cgol PRIVATE WINDOWS_BUILD)
+else()
+	add_executable(cgol "sources/main.cpp")
+endif()
 
 target_include_directories(cgol PRIVATE "sources")
 target_link_libraries(cgol PRIVATE tex::tex)
