--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.10.0 FATAL_ERROR)
 project(conways_game_of_life VERSION 1.0.0 LANGUAGES C CXX)
 
 add_subdirectory("dependencies/tex")
@@ -9,6 +9,10 @@ if (WIN32)
 else()
 	add_executable(cgol "sources/main.cpp")
 endif()
+
+set_target_properties(cgol PROPERTIES 
+	CXX_STANDARD 17
+	CXX_STANDARD_REQUIRED ON)
 
 target_include_directories(cgol PRIVATE "sources")
 target_link_libraries(cgol PRIVATE tex::tex)
